2007-02-26  Michael Smith  <msmith@fluendo.com>

	* flumotion/component/producers/asfparse.py:
	  Comment out a number of unused things we read from the bitstream to
	  make pychecker quieter.
	* flumotion/component/producers/wms.py:
	* flumotion/component/producers/wms.xml:
	  Porter support.
	  Allow specifying port to listen on if not using the porter.

2007-02-26  Michael Smith  <msmith@fluendo.com>

	* flumotion/component/producers/asfparse.py:
	* flumotion/component/producers/queue.py:
	* flumotion/component/producers/wms.py:
	  Prevent multiple connections to this component from interfering.

2007-02-23  Michael Smith  <msmith@fluendo.com>

	* flumotion/component/producers/wms.py:
	  Validate pushIds.
	  Expire opaque/nonce pairs.
	  Send 'stale' when appropriate.
	  Identify our server as flumotion (as well as Cougar)

2007-02-23  Michael Smith  <msmith@fluendo.com>

	* flumotion/component/producers/asfparse.py:
	  Parse more of headers to find out whether the stream will contain
	  keyframes.
	  Parse data packet payload headers to see if this is a keyframe.
	  Use timestamps, duration, and delta-unit flags on buffers.

2007-02-22  Michael Smith  <msmith@fluendo.com>

	* flumotion/component/producers/asfparse.py:
	  Rewrite buffer handling, set timestamps, durations, and appropriate
	  flags (but those come from a stubbed-out method for the moment)

2007-02-22  Michael Smith  <msmith@fluendo.com>

	* flumotion/component/producers/asfparse.py:
	  Move to BaseSrc, as PushSrc.do_create() isn't wrapped properly.
	  Fix up return values from do_create()
	  Stop dumping to file.
	* flumotion/component/producers/wms.py:
	  Chain up to ParseLaunchComponent.do_start(), so that the pipeline
	  gets started.
	* flumotion/component/producers/wms.xml:
	  Fix up bundling information

2007-02-22  Michael Smith  <msmith@fluendo.com>

	* flumotion/component/producers/asfparse.py:
	* flumotion/component/producers/wms.py:
	* flumotion/component/producers/wms.xml: