@@ -1,3 +1,10 @@
+2007-03-08  Thomas Vander Stichele  <thomas at apestaart dot org>
+
+	* flumotion/component/encoders/wma/wma.py:
+	* flumotion/component/encoders/wmv/wmv.py:
+	* flumotion/component/muxers/asf/asf.py:
+	  check for plugins needed.  This needs a recent (0.4.1.1) trunk.
+
 2007-02-26  Michael Smith  <msmith@fluendo.com>
 
 	* flumotion/component/producers/asfparse.py:
